--- a/optimade.yaml
+++ b/optimade.yaml
@@ -8,17 +8,22 @@ entries:
     entry_paths:
       - file: data/gnome_data/by_id.zip
         matches:
-          - by_id/*.CIF
+          - data/gnome_data/by_id/*.CIF
     property_paths:
       - file: data/gnome_data/stable_materials_summary.csv
     property_definitions:
-    - name: MaterialId
-      title: Internal ID
+    - name: material_id
+      title: Gnome Internal ID
       description: The material ID in the deepmind dataset
       type: string
-      alias: material_id
-    - name: Formation Energy Per Atom
+      alias: MaterialId
+    - name: formation_energy_per_atom
       title: Formation energy per atom
       description: The formation energy of the material
       type: float
-      alias: formation_energy_per_atom
+      alias: Formation Energy Per Atom
+    - name: decomposition_energy_per_atom
+      title: Decomposition energy per atom
+      description: The decomposition energy of the material
+      type: float
+      alias: Decomposition Energy Per Atom
